syntax = "proto3";

package POGOProtos.Networking.Responses;

message EchoResponse {
	string context = 1;
}

